logs/pipelines.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.8.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 357
    raise type(self._exception), self._exception, self._traceback
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/dotmap'...
Listing './lib/python3.5/site-packages/dotmap-1.1.16.egg-info'...
Listing './lib/python3.5/site-packages/filelock-2.0.6.egg-info'...
Listing './lib/python3.5/site-packages/futures-3.0.5.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pipelines'...
Listing './lib/python3.5/site-packages/pipelines/api'...
Listing './lib/python3.5/site-packages/pipelines/api/app_dist'...
Listing './lib/python3.5/site-packages/pipelines/api/app_dist/client'...
Listing './lib/python3.5/site-packages/pipelines/api/app_dist/client/dist'...
Compiling './lib/python3.5/site-packages/pipelines/api/ghauth.py'...
***   File "./lib/python3.5/site-packages/pipelines/api/ghauth.py", line 168
    print 'Callback: %s' % args
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipelines/api/server.py'...
***   File "./lib/python3.5/site-packages/pipelines/api/server.py", line 262
    print 'set secure cookie'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pipelines/api/templates'...
Listing './lib/python3.5/site-packages/pipelines/pipeline'...
Compiling './lib/python3.5/site-packages/pipelines/pipeline/var_processing.py'...
***   File "./lib/python3.5/site-packages/pipelines/pipeline/var_processing.py", line 62
    print json.dumps(res, indent=2)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pipelines/plugin'...
Compiling './lib/python3.5/site-packages/pipelines/plugin/manager.py'...
***   File "./lib/python3.5/site-packages/pipelines/plugin/manager.py", line 69
    print m.get_plugin_count()
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pipelines/plugins'...
Compiling './lib/python3.5/site-packages/pipelines/plugins/base_executor.py'...
***   File "./lib/python3.5/site-packages/pipelines/plugins/base_executor.py", line 16
    print 'Running executor with command: %s' % command
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipelines/plugins/dummy_executor.py'...
***   File "./lib/python3.5/site-packages/pipelines/plugins/dummy_executor.py", line 25
    print 'Running executor with command: %s' % cmd
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pipelines/plugins/python_executor.py'...
***   File "./lib/python3.5/site-packages/pipelines/plugins/python_executor.py", line 73
    print 'Finished, stdout: %s' % (stdout)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pipelines-0.0.14.egg-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.9.1.dist-info'...
Listing './lib/python3.5/site-packages/schema-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sh-1.11.egg-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
